fix iframes from getting off-center on small screens

--- a/glitch-dot-cool/src/styles/global.css
+++ b/glitch-dot-cool/src/styles/global.css
@@ -15,7 +15,7 @@ body {
 
 iframe {
   width: 100%;
-  padding: .5rem;
+  padding: .5rem 0;
 }
 
 iframe.youtube {
